@startuml

title __APP's Class Diagram__\n

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.BuildConfig {
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.DisplayErrorsActivity {
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.ErrorsData {
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.FixErrorsActivity {
    }
  }
  

  namespace com.example.remoteCompiler {
    class com.example.remoteCompiler.MainActivity {
    }
  }
  

  com.example.remoteCompiler.DisplayErrorsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.remoteCompiler.FixErrorsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.remoteCompiler.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
